--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
 
         <button class="tool-btn" id="tool-select">Select / Move</button>
         <button class="tool-btn" id="tool-erase">Erase</button>
+        <button class="tool-btn" id="toggle-probe">Field Probe</button>
 
         <div class="toolbar-separator"></div>
 
         <!-- NEW: Electric Field Toggle -->
         <button class="tool-btn" id="toggle-field">Show Electric Field</button>
         <button class="tool-btn" id="toggle-lines">Show Field Lines</button>
+        <button class="tool-btn" id="toggle-heatmap">Show Electric Potential</button>
+        <button class="tool-btn" id="toggle-equip">Show Equipotentials</button>
+
 
         <div class="toolbar-separator"></div>
 
         <button class="tool-btn danger" id="tool-clear">Clear All</button>
     </div>
 
-
-
     <!-- CENTER CANVAS -->
     <div id="canvas-container"></div>
-
-
 
     <!-- RIGHT CONTROLS PANEL -->
     <div id="controls-right">
