--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div id="toolbar-left">
         <div class="toolbar-title">TOOLS</div>
 
-        <button class="tool-btn" id="tool-add-plus">Add + Charge</button>
-        <button class="tool-btn" id="tool-add-minus">Add – Charge</button>
-        <button class="tool-btn" id="tool-add-random">Add Random</button>
+        <button class="tool-btn tool" id="tool-add-plus">Add + Charge</button>
+        <button class="tool-btn tool" id="tool-add-minus">Add – Charge</button>
+        <button class="tool-btn tool" id="tool-add-random">Add Random</button>
 
         <div class="toolbar-separator"></div>
 
-        <button class="tool-btn" id="tool-select">Select / Move</button>
-        <button class="tool-btn" id="tool-erase">Erase</button>
-        <button class="tool-btn" id="toggle-probe">Field Probe</button>
+        <button class="tool-btn tool" id="tool-select">Select / Move</button>
+        <button class="tool-btn tool" id="tool-erase">Erase</button>
+        <button class="tool-btn tool" id="toggle-probe">Field Probe</button>
 
         <div class="toolbar-separator"></div>
 
